--- a/admin/update_header.html
+++ b/admin/update_header.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>DB Update</title>
+		<title>jPeople - Admin</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-theme.min.css">
 	</head>
 	<body>
 	<div class="container">
-		<h1>DB update</h1>
+		<h1>jPeople - Admin</h1>
 		<br />
